txt-output/71.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: doRow r ys should be doRow ys r
plot f dx dy oy =                                                   
    let fxs = getYs f dx
        ys = map (\y-> fromIntegral (y-oy)*dy) [maxY,maxY-1..minY]
        rows = map (doRow fxs) ys
    in unlines rows
        where
        doRow [] r = ""
        doRow (y:ys) r = (if y < r && y > (r-dy) then '*'
                            else ' ') : doRow r ys
        getYs f dx = [ f ((centre x * dx)) | x <- [minX..maxX] ]
            where centre = (+) .5
minX = 0
maxX = 79
minY = 0
maxY = 19

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\71.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\71.hs:14:40:
    Occurs check: cannot construct the infinite type: t = [t]
      Expected type: t -> [t] -> [Char]
      Inferred type: [t] -> t -> [Char]
    In the second argument of `(:)', namely `doRow r ys'
    In the expression:
          (if y < r && y > (r - dy) then '*' else ' ') : doRow r ys


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\71.hs, ill-typed\71.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\71.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\71.hs:9:32: error:
    * Couldn't match type `a' with `[a]'
      Expected: [[[a]]]
        Actual: [[a]]
      `a' is a rigid type variable bound by
        the inferred type of
          plot :: ((b -> b) -> a) -> (b -> b) -> [a] -> a0 -> String
        at ill-typed\71.hs:(6,1)-(16,33)
    * In the second argument of `map', namely `ys'
      In the expression: map (doRow fxs) ys
      In an equation for `rows': rows = map (doRow fxs) ys
    * Relevant bindings include
        fxs :: [a] (bound at ill-typed\71.hs:7:9)
        ys :: [[a]] (bound at ill-typed\71.hs:8:9)
        doRow :: [a] -> [[a]] -> [Char] (bound at ill-typed\71.hs:12:9)
        dy :: [a] (bound at ill-typed\71.hs:6:11)
        f :: (b -> b) -> a (bound at ill-typed\71.hs:6:6)
        plot :: ((b -> b) -> a) -> (b -> b) -> [a] -> a0 -> String
          (bound at ill-typed\71.hs:6:1)
  |
9 |         rows = map (doRow fxs) ys
  |                                ^^

ill-typed\71.hs:12:9: error:
    * Couldn't match type `a' with `[a]'
      Expected: [a] -> [[a]] -> [Char]
        Actual: [[a]] -> [a] -> String
      `a' is a rigid type variable bound by
        the inferred type of
          plot :: ((b -> b) -> a) -> (b -> b) -> [a] -> a0 -> String
        at ill-typed\71.hs:(6,1)-(16,33)
    * In an equation for `plot':
          plot f dx dy oy
            = let
                fxs = getYs f dx
                ys = map (\ y -> ...) ...
                ....
              in unlines rows
            where
                doRow [] r = ""
                doRow (y : ys) r
                  = (if y < r && y > (r - dy) then '*' else ' ') : doRow r ys
                getYs f dx
                  = [f ((centre x * dx)) | x <- [minX .. maxX]]
                  where
                      centre = (+) . 5
    * Relevant bindings include
        doRow :: [a] -> [[a]] -> [Char] (bound at ill-typed\71.hs:12:9)
        dy :: [a] (bound at ill-typed\71.hs:6:11)
        f :: (b -> b) -> a (bound at ill-typed\71.hs:6:6)
        plot :: ((b -> b) -> a) -> (b -> b) -> [a] -> a0 -> String
          (bound at ill-typed\71.hs:6:1)
   |
12 |         doRow [] r = ""
   |         ^^^^^^^^^^^^^^^...
